<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BDThèque</string>
    <string name="search_label">BDThèque</string>
    <string name="search_hint">Rechercher dans la base de données</string>
    <string name="menu_search">Rechercher</string>
    <string name="menu_share">Partager…</string>
    <string name="menu_options">Configurer…</string>
    <string name="pref_notationListe">notationListe</string>
    <string name="pref_formatTitreAlbum">formatTitreAlbum</string>
    <string name="menuRepertoirePersonnes">Auteurs</string>
    <string name="menuRepertoireSeriesTitre">Séries par titre</string>
    <string name="menuRepertoireSeriesGenre">Séries par genre</string>
    <string name="menuRepertoireAlbumsTitre">Albums par titre</string>
    <string name="menuRepertoireAlbumsSerie">Albums par série</string>
    <string name="menuRepertoireAlbumsEditeur">Albums par éditeur</string>
    <string name="menuRepertoireAlbumsGenre">Albums par genre</string>
    <string name="menuRepertoireAlbumsAnnee">Albums par année de parution</string>
    <string name="menuRepertoireAlbumsCollection">Albums par collection</string>
    <string name="splash_description">splash screen</string>
    <string name="fiche_album_serie">Série :</string>
    <string name="fiche_album_titre">Titre :</string>
    <string name="fiche_album_tome">Tome :</string>
    <string name="fiche_album_parution">Parution :</string>
    <string name="fiche_album_integrale">Intégrale</string>
    <string name="fiche_album_horsserie">Hors série</string>
    <string name="fiche_album_genres">Genre :</string>
    <string name="fiche_album_histoire">Histoire :</string>
    <string name="fiche_album_notes">Notes :</string>
    <string name="fiche_album_scenaristes">Scénario :</string>
    <string name="fiche_album_dessinateurs">Dessins :</string>
    <string name="fiche_album_coloristes">Couleurs :</string>
    <plurals name="fiche_album_tab_editions">
        <item quantity="one">Edition</item>
        <item quantity="other">Edition</item>
    </plurals>
    <string name="fiche_edition_isbn">ISBN :</string>
    <string name="fiche_edition_editeur">Editeur :</string>
    <string name="fiche_edition_collection">Collection :</string>
    <string name="fiche_edition_année">Année :</string>
    <string name="fiche_edition_stock">Stock</string>
    <string name="fiche_edtion_couleur">Couleur</string>
    <string name="fiche_edition_vo">VO</string>
    <string name="fiche_edition_dedicacé">Dédicacé</string>
    <string name="fiche_edition_offert">Offert</string>
    <string name="fiche_edition_prix">Prix :</string>
    <string name="fiche_edition_offertle">Offert le :</string>
    <string name="fiche_edition_achetéle">Acheté le :</string>
    <string name="fiche_edition_notes">Notes :</string>
    <string name="fiche_edition_pages">Pages :</string>
    <string name="fiche_edition_numero">N° perso :</string>
    <string name="gratuit">Gratuit</string>
    <string name="pref_symboleMonetaire">symboleMonetaire</string>
    <string name="fiche_edition_cote">Cote :</string>
    <string name="fiche_edition_typeedition">Type d\'édition :</string>
    <string name="fiche_edition_reliure">Reliure :</string>
    <string name="fiche_edition_etatedition">Etat :</string>
    <string name="fiche_edition_orientation">Orientation :</string>
    <string name="fiche_edition_formatedition">Format :</string>
    <string name="fiche_edition_senslecture">Sens de lecture :</string>
    <string name="fiche_album_albums">Albums de la série :</string>
    <string name="fiche_album_tab_details">Détails</string>
    <string name="fiche_serie_tab_details">Détails</string>
    <string name="fiche_serie_tab_albums">Albums de la série</string>
    <string name="fiche_serie_titre">Titre :</string>
    <string name="fiche_serie_genres">Genre :</string>
    <string name="fiche_serie_scenaristes">Scénario :</string>
    <string name="fiche_serie_dessinateurs">Dessins :</string>
    <string name="fiche_serie_coloristes">Couleurs :</string>
    <string name="fiche_serie_histoire">Histoire :</string>
    <string name="fiche_serie_notes">Notes :</string>
    <string name="fiche_serie_editeur">Editeur :</string>
    <string name="fiche_serie_collection">Collection :</string>
    <string name="fiche_personne_tab_bibliographie">Bibliographie</string>
    <string name="fiche_personne_tab_details">Biographie</string>
    <string name="fiche_personne_biographie">Biographie :</string>
    <string name="fiche_personne_nom">Nom :</string>
    <string name="notation_0">Pas d\'avis</string>
    <string name="notation_1">Très mauvais</string>
    <string name="notation_2">Mauvais</string>
    <string name="notation_3">Moyen</string>
    <string name="notation_4">Bien</string>
    <string name="notation_5">Très bien</string>

    <string-array name="pref_formatTitreAlbum_entries">
        <item>Album (Serie - Tome)</item>
        <item>Tome - Album (Serie)</item>
    </string-array>
</resources>